--- a/bedrock/firefox/templates/firefox/android/index.html
+++ b/bedrock/firefox/templates/firefox/android/index.html
@@ -311,18 +311,17 @@
     </p>
 
     <ul>
-      <li id="dnt">
-        <h3>{{ _('Do not track') }}</h3>
+      {% if l10n_has_tag('tracking_protection') and waffle.switch('tracking-protection') %}
+      <li id="private-browsing">
+        <h3>{{ _('Private Browsing with<br> Tracking Protection') }}</h3>
 
         <p>
-        {% trans %}
-          Enable this Firefox innovation to help you stay in control of how your browsing
-          information is collected and used online.
-        {% endtrans %}
+          {{ _('Browse without having your history, searches or cookies saved, and block hidden third parties from following you across the Web.') }}
         </p>
 
-        <a href="{{ url('firefox.dnt') }}">{{ _('Learn more about Do Not Track') }}</a>
+        <a class="more" rel="external" data-interaction="outbound link" href="https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info">{{ _('Learn more about Private Browsing') }}</a>
       </li>
+      {% else %}
       <li id="private-browsing">
         <h3>{{ _('Private Browsing') }}</h3>
 
@@ -341,6 +340,7 @@
           {% endif %}
         </a>
       </li>
+      {% endif %}
       <li id="clear-history">
         <h3>{{ _('Clear history') }}</h3>
 
