--- a/media/css/firefox/android.less
+++ b/media/css/firefox/android.less
@@ -483,6 +483,7 @@ html[dir="rtl"] #phone-wrapper figure {
     .container {
         width: 780px;
         padding: 80px;
+        text-align: center;
     }
 
     .heading {
@@ -498,42 +499,59 @@ html[dir="rtl"] #phone-wrapper figure {
     }
 
     li {
-        float: left;
-        // each icon in sprite is at left edge of 300px wide area
-        background: url(/media/img/firefox/android/sprite-privacy.png) left top no-repeat;
-        list-style-type: none;
+        display: inline-block;
         margin: 0 0 50px 0;
-        width: 380px - (@baseLine * 2);
-        padding: 170px @baseLine 0;
-        text-align: center;
+        padding: 0 @baseLine 0;
+        width: 240px - (@baseLine * 2);
+        list-style-type: none;
+        vertical-align: top;
 
-        &:nth-child(odd) {
-            margin-right: @baseLine;
+        @media only screen and (max-width: @breakMobileLandscape) {
+            padding: 0;
+        }
+
+        &:before {
+            display: block;
+            // each icon in sprite is at left edge of 300px wide area
+            background: url(/media/img/firefox/android/sprite-privacy.png) left top no-repeat;
+            content: '';
+            margin: 0 auto;
+            width: 200px;
+            height: 160px;
         }
 
         h3 {
             text-transform: uppercase;
             font-weight: normal;
             .font-size(18px);
+            line-height: 1.3;
             text-shadow: none;
             color: #fff;
         }
     }
 
     #dnt {
-        background-position: 119px top;
+        &:before {
+            background-position: 119px top;
+        }
     }
 
     #private-browsing {
-        background-position: -181px top;
+        &:before {
+            background-position: -271px top;
+        }
     }
 
     #clear-history {
-        background-position: -481px top;
+        &:before {
+            background-position: -570px top;
+        }
     }
 
     #guest-browsing {
-        background-position: -781px top;
+        &:before {
+            background-position: -871px top;
+        }
     }
 }
 
@@ -882,8 +900,10 @@ html[lang="ja"] #privacy p {
     }
 
     #privacy li {
-        background-image: url(/media/img/firefox/android/sprite-privacy-high-res.png);
-        .background-size(1200px, 142px);
+        &:before {
+            background-image: url(/media/img/firefox/android/sprite-privacy-high-res.png);
+            .background-size(1200px, 142px);
+        }
     }
 }
 
@@ -972,23 +992,35 @@ html[lang="ja"] #privacy p {
         }
 
         li {
-            width: 310px;
+            display: block;
+            margin: 0 auto (@baseLine * 2) auto;
+            padding-left: 0;
+            padding-right: 0;
+            width: 50%;
         }
 
         #dnt {
-            background-position: 109px top;
+            &:before {
+                background-position: 109px top;
+            }
         }
 
         #private-browsing {
-            background-position: -191px top;
+            &:before {
+                background-position: -271px top;
+            }
         }
 
         #clear-history {
-            background-position: -491px top;
+            &:before {
+                background-position: -571px top;
+            }
         }
 
         #guest-browsing {
-            background-position: -791px top;
+            &:before {
+                background-position: -871px top;
+            }
         }
     }
 
@@ -1216,31 +1248,31 @@ html[lang="ja"] #privacy p {
         }
 
         li {
-            float: none;
-            display: block;
-            margin: 0 auto (@baseLine * 2) auto;
-            padding-left: 0;
-            padding-right: 0;
-
-            &:nth-child(odd) {
-                margin-right: auto;
-            }
+            width: 70%;
         }
 
         #dnt {
-            background-position: 99px top;
+            &:before {
+                background-position: 99px top;
+            }
         }
 
         #private-browsing {
-            background-position: -201px top;
+            &:before {
+                background-position: -271px top;
+            }
         }
 
         #clear-history {
-            background-position: -501px top;
+            &:before {
+                background-position: -571px top;
+            }
         }
 
         #guest-browsing {
-            background-position: -801px top;
+            &:before {
+                background-position: -871px top;
+            }
         }
     }
 
@@ -1394,19 +1426,27 @@ html[lang="ja"] #privacy p {
         }
 
         #dnt {
-            background-position: 79px top;
+            &:before {
+                background-position: 121px top;
+            }
         }
 
         #private-browsing {
-            background-position: -221px top;
+            &:before {
+                background-position: -271px top;
+            }
         }
 
         #clear-history {
-            background-position: -521px top;
+            &:before {
+                background-position: -571px top;
+            }
         }
 
         #guest-browsing {
-            background-position: -821px top;
+            &:before {
+                background-position: -871px top;
+            }
         }
     }
 
