Bug 1210557 - Unwrapped string in newsletter recovery template

--- a/bedrock/newsletter/templates/newsletter/recovery.html
+++ b/bedrock/newsletter/templates/newsletter/recovery.html
@@ -31,7 +31,7 @@
           {{ form.email }}
           {{ form.email.errors }}
         </div>
-        <input type="submit" value="Send me a link" class="button">
+        <input type="submit" value="{{ _('Send me a link') }}" class="button">
       </div>
 
     </form>
