--- a/media/css/firefox/ios.less
+++ b/media/css/firefox/ios.less
@@ -8,8 +8,6 @@
 @mozIDBlue: #0c99d5;
 
 .mozid {
-    color: #fff;
-
     #outer-wrapper {
         .aurora-bars;
     }
@@ -27,8 +25,9 @@
     }
 }
 
+
 .container {
-    .border-box();
+    .border-box;
     width: @widthDesktop;
     margin: 0 auto;
 
@@ -60,7 +59,7 @@
         width: 110px;
         height: 115px;
         margin-top: @baseLine;
-        .image-replaced();
+        .image-replaced;
         .at2x('/media/img/firefox/ios/firefox-logo.png', 110px, 115px);
 
         @media (max-width: @breakTablet) {
@@ -74,26 +73,27 @@
 }
 
 a.go {
-    .trailing-arrow();
+    .trailing-arrow;
 }
 
 // Main hero space
 .section-intro {
     .container {
-        padding: 40px 500px 80px 10px;
+        padding: 60px 500px 80px 10px;
         min-height: 550px;
-        background-position: 570px 0;
+        background-position: 570px 20px;
         background-repeat: no-repeat;
         .at2x('/media/img/firefox/ios/firefox-iphone-white.png', 387px, 1132px);
 
         @media only screen and (max-width: @breakDesktop) {
-            padding: 40px 360px 80px 10px;
+            padding: 60px 360px 80px 10px;
             .background-size(290px 849px);
-            background-position: 440px 0;
+            background-position: 440px 20px;
         }
 
         @media only screen and (max-width: @breakTablet) {
-            padding: 0 @gridGutterWidth 320px;
+            padding: 40px @gridGutterWidth 320px;
+            // high res version of this image is declared later; can't nest media queries.
             background: url(/media/img/firefox/ios/firefox-iphone-white-crop.png) center bottom no-repeat;
         }
     }
@@ -156,7 +156,6 @@ a.go {
             margin-top: 0;
         }
     }
-
 
     h1 {
         .font-size(82px);
@@ -329,6 +328,7 @@ a.go {
     }
 }
 
+
 // Android users get an Android link.
 // Default to visible for non-JS, just in case.
 .js .android-link,
@@ -344,15 +344,16 @@ a.go {
 
 // Sync
 .section-sync {
-    padding: 60px 0;
+    padding: 80px 0 40px;
     background: #fff;
     color: @textColorPrimary;
     text-align: center;
 
     h2 {
-        color: @textColorSecondary;
         .font-size(48px);
         line-height: 1.3;
+        color: @textColorSecondary;
+        margin-bottom: @baseLine * 2;
         padding: 135px 0 0;
         position: relative;
 
@@ -424,12 +425,11 @@ a.go {
 }
 
 .sync-features {
+    .clearfix;
     clear: both;
-    .clearfix();
     list-style: none;
-    margin: 20px auto 40px;
+    margin: @baseLine auto (@baseLine * 3);
     text-align: center;
-    width: (@gridColumnWidth * 9) + (@gridGutterWidth * 9);
 
     @media only screen and (max-width: @breakTablet) {
         display: block;
@@ -437,10 +437,13 @@ a.go {
     }
 
     li {
-        .span(3);
         .font-size(22px);
-        position: relative;
+        .border-box;
         padding-top: 160px;
+        margin: 0 1.5%;
+        position: relative;
+        width: 30%;
+        float: left;
 
         &:before {
             content: '';
@@ -467,11 +470,16 @@ a.go {
             background-position: -142px 0;
         }
 
-        @media only screen and (max-width: @breakTablet) {
-            width: auto;
-            float: none;
+        &.sync-bookmarks:before {
+            background-position: -142px -142px;
+        }
+
+        &.sync-reading-list:before {
+            background-position: 0 -284px;
+        }
+
+        @media only screen and (max-width: @breakDesktop) {
             padding-top: 140px;
-            margin: 0 auto 1em;
             .font-size(18px);
 
             &:before {
@@ -492,9 +500,32 @@ a.go {
             &.sync-tabs:before {
                 background-position: -120px 0;
             }
+
+            &.sync-bookmarks:before {
+                background-position: -122px -121px;
+            }
+
+            &.sync-reading-list:before {
+                background-position: 0 -242px;
+            }
+        }
+
+        @media only screen and (max-width: @breakTablet) {
+            width: auto;
+            float: none;
+            margin: 0 auto 1em;
+        }
+    }
+
+    &.ios-active li {
+        width: 22%;
+
+        @media only screen and (max-width: @breakTablet) {
+            width: auto;
         }
     }
 }
+
 
 // Sync Calls to Action
 .sync-cta {
@@ -540,6 +571,109 @@ a.go {
 }
 
 
+// Privacy
+.section-privacy {
+    background: #005189;
+    color: #bee1f5;
+    padding: 80px 0 40px;
+
+    h2 {
+        .font-size(48px);
+        line-height: 1.2;
+        text-shadow: none;
+        text-align: center;
+        margin: 0 auto 16px;
+        color: #fff;
+
+        @media (max-width: @breakDesktop) and (min-width: (@breakTablet + 1)) {
+            .font-size(40px);
+        }
+
+        @media only screen and (max-width: @breakTablet) {
+            .font-size(30px);
+        }
+    }
+
+    .lead {
+        .open-sans-light();
+        .font-size(24px);
+        line-height: 1.4;
+        text-align: center;
+        margin: 0 auto (@baseLine * 3);
+
+        @media (max-width: @breakDesktop) and (min-width: (@breakTablet + 1)) {
+            .font-size(22px);
+        }
+
+        @media only screen and (max-width: @breakTablet) {
+            .font-size(20px);
+            margin-bottom: 40px;
+        }
+    }
+
+    ul {
+        width: 80%;
+        margin: 0 auto;
+
+        @media (max-width: @breakDesktop) {
+            width: auto;
+        }
+    }
+
+    li {
+        float: left;
+        list-style-type: none;
+        margin: 0 5% (@baseLine * 2);
+        width: 40%;
+        padding-top: 160px;
+        text-align: center;
+        position: relative;
+        .font-size(@largeFontSize);
+
+        &:before {
+            content: '';
+            display: block;
+            width: 140px;
+            height: 140px;
+            position: absolute;
+            left: 50%;
+            top: 0;
+            margin-left: -70px;
+            .at2x('/media/img/firefox/ios/privacy-sprite.png', 140px, 300px);
+            background-repeat: no-repeat;
+        }
+
+        @media only screen and (max-width: @breakTablet) {
+            float: none;
+            width: auto;
+            margin: 0 auto (@baseLine * 2);
+        }
+
+        h3 {
+            font-weight: normal;
+            .font-size(22px);
+            text-shadow: none;
+            color: #fff;
+        }
+
+        a:link,
+        a:visited,
+        a:hover,
+        a:focus {
+            color: #71c4ea;
+            .trailing-arrow;
+        }
+    }
+
+    #clear-history:before {
+        background-position: 0 0;
+    }
+
+    #private-browsing:before {
+        background-position: 0 -150px;
+    }
+}
+
 
 // Send to Device Widget
 #send-to-device {
@@ -567,12 +701,30 @@ a.go {
     top: -30px;
 }
 
-// Send to Device button
-// Hidden for now, pending a future A/B test.
-.get-fxios .send-to-device {
+// Send to Device button shown by default
+.get-fxios .send-to-device,
+.fxfamilynav-cta-wrapper .send-to {
+    display: block;
+}
+
+// App store badge hidden by default
+.get-fxios .appstore-badge,
+.fxfamilynav-cta-wrapper .dl-button {
     display: none;
 }
 
+.fxfamilynav-cta-wrapper .dl-button {
+    text-align: center;
+    margin-top: 6px;
+}
+
+.fxfamilynav-cta-wrapper .send-to {
+    padding: 7px (@baseLine / 2);
+    .font-size(@smallFontSize);
+    color: #fff;
+    text-align: center;
+    margin-top: 10px;
+}
 
 
 // Sync instructions for iOS users
