Fix bug 1211544 - Add Ari Jaaksi to leadership and steering committee pages

--- a/bedrock/foundation/templates/foundation/mocosc.html
+++ b/bedrock/foundation/templates/foundation/mocosc.html
@@ -35,7 +35,7 @@
 
   <p>
     {% trans %}
-      Members of the Steering Committee as of August, 2015 are listed below.
+      Members of the Steering Committee as of October, 2015 are listed below.
     {% endtrans %}
   </p>
 
@@ -45,6 +45,7 @@
     <li><a href="https://blog.mozilla.org/press/bios/david-bryant/">David Bryant, {{ _('Interim CTO and VP, Platform Engineering') }}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/jim-cook/">Jim Cook, {{ _('Chief Finance Officer') }}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/denelle-dixon-thayer/">Denelle Dixon-Thayer, {{ _('Chief Legal and Business Officer') }}</a></li>
+    <li><a href="https://blog.mozilla.org/press/bios/ari-jaaksi/">Ari Jaaksi, {{ _('Senior Vice President, Connected Devices') }}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/jascha-kaykas-wolff/">Jascha Kaykas-Wolff, {{ _('Chief Marketing Officer') }}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/mark-mayo/">Mark Mayo, {{_('Senior Vice President, Firefox')}}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/david-slater/">David Slater, {{ _('Chief of Staff and SVP of Operations') }}</a></li>
