--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -101,6 +101,20 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/ari-jaaksi/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/ari-jaaksi.jpg') }}">
+          <span class="fn" itemprop="name">Ari Jaaksi</span>
+        </a>
+        <span class="title" itemprop="jobTitle">{{ _('Senior Vice President, Connected Devices') }}</span>
+        <span class="note">{{ _('Steering Committee') }}</span>
+
+        <ul class="elsewhere">
+          <li><a class="url twitter" itemprop="url" href="https://twitter.com/jaaksi">@jaaksi</a></li>
+          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/arijaaksi/">{{ _('Mozillians profile') }}</a></li>
+        </ul>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/jascha-kaykas-wolff/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/jascha-kaykas-wolff.jpg') }}">
           <span class="fn" itemprop="name">Jascha Kaykas-Wolff</span>
