--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -1077,6 +1077,22 @@ html[lang|="en"] {
 
 
 /****************************************************************************/
+// Private Browsing
+.promo-large-portrait.private-browsing {
+    background: #5f6065; // dark gray
+
+    h2 {
+        padding-top: 155px;
+        background: url(/media/img/home/voices/promos/private-browsing/private-browsing.svg) center 45px no-repeat;
+    }
+
+    h3 {
+        margin-top: @baseLine * 2;
+    }
+}
+
+
+/****************************************************************************/
 // Firefox Android
 .promo-large-portrait.firefox-android {
     background: #00659a;
