Bug 1188591 - SmartOn: Cybersecurity

--- a/media/css/teach/smarton.less
+++ b/media/css/teach/smarton.less
@@ -41,7 +41,7 @@
         .note em { color: ~'@{@{color}}'; }
         .sidebar-chart {
             border-color: ~'@{@{color}-extra-light}';
-            .circles-valueStroke { stroke: ~'@{@{color}-extra-light}'; }
+            .circles-valueStroke { stroke: ~'@{@{color}-light}'; }
             .circles-text { color: ~'@{@{color}}'; }
         }
         .main .section ul > li:before { color: ~'@{@{color}-light}'; }
