--- a/bedrock/firefox/templates/firefox/new.html
+++ b/bedrock/firefox/templates/firefox/new.html
@@ -38,7 +38,9 @@
 {% endblock %}
 
 {% block js_pretrack %}
+{% if not waffle.switch('firefox-ios-global') %}
   {% javascript 'firefox_new_ios_redirect' %}
+{% endif %}
 {% endblock %}
 
 {% block optimizely %}
@@ -51,15 +53,6 @@
 
 <main role="main">
   <div class="version-message-container">
-    {% if l10n_has_tag('ios_announce') %}
-      <div id="version-message-ios" class="version-message">
-        {{_('Firefox is coming soon to iOS! <a href="{url}">Sign up to learn more</a>.').format(url=url('newsletter.ios'))|safe }}
-      </div>
-    {% else %}
-      <div id="version-message-ios" class="version-message">
-        {{_('Sorry, Firefox is currently unsupported by iOS devices.')}}
-      </div>
-    {% endif %}
     <div id="version-message-android-latest" class="version-message">
       {{_('Congrats! You’re using the latest version of Firefox.')}}
     </div>
@@ -118,12 +111,20 @@
         <div class="android download-button-wrapper" data-upgrade-subtitle="{{_('Get it free on Google Play')}}">
           {{ download_firefox(platform='android', small=True, icon=False, dom_id='download-button-android') }}
         </div>
+        {% if waffle.switch('firefox-ios-global') %}
+        <div class="ios download-button-wrapper">
+          {{ download_firefox(platform='ios', small=True, icon=False, dom_id='download-button-ios') }}
+        </div>
+        {% endif %}
         <div class="desktop-latest-links-wrapper latest-links-wrapper">
           <ul>
             <li class="hide-for-refresh"><a href="{{ url('firefox.desktop.index') }}">{{_('Learn more about Firefox for desktop')}}</a></li>
             <li><a href="https://support.mozilla.org/products/firefox?utm_source=mozilla.org&amp;utm_medium=referral&amp;utm_campaign=need-help-link">{{_('Need help?')}}</a></li>
             {% if l10n_has_tag('mobile_links') %}
             <li class="hide-for-refresh"><a href="{{settings.GOOGLE_PLAY_FIREFOX_LINK }}">{{_('Get Firefox on your Android device')}}</a></li>
+            {% if l10n_has_tag('firefox_ios') and waffle.switch('firefox-ios-global') %}
+            <li class="hide-for-refresh"><a href="{{ settings.APPLE_APPSTORE_FIREFOX_LINK }}">{{ _('Add Firefox to your iPhone, iPad and iPod touch') }}</a></li>
+            {% endif %}
             <li class="hide-for-refresh"><a href="{{ url('firefox.os.index') }}">{{_('Learn about Firefox OS')}}</a></li>
             {% endif %}
             <li><a href="{{ url('firefox.all') }}#{{ LANG }}">{{_('Download a fresh copy')}}</a></li>
@@ -138,23 +139,6 @@
           <ul>
             <li><a href="{{ url('firefox.os.index') }}">{{_('Learn about Firefox OS')}}</a></li>
             <li><a href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}">{{_('Discover all the ways to take Firefox on the go')}}</a></li>
-          </ul>
-        </div>
-        <div class="ios-links-wrapper latest-links-wrapper">
-          <ul>
-            {% if l10n_has_tag('ios_announce') %}
-              <li><a href="{{ url('newsletter.ios') }}">{{_('Learn more about Firefox on iOS')}}</a></li>
-            {% elif l10n_has_tag('mobile_links') %}
-              <li>
-                <a href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}">{{_('Get Firefox on your Android device')}}</a>
-              </li>
-              <li>
-                <a href="{{ url('firefox.os.index') }}">{{_('Learn about Firefox OS')}}</a>
-              </li>
-              <li>
-                <a href="https://support.mozilla.org/kb/is-firefox-available-iphone-or-ipad">{{_('Why don’t we offer an iOS version?')}}</a>
-              </li>
-            {% endif %}
           </ul>
         </div>
       </div>
